# QML-AnalyzingGalaxies

./: .gitignore  README.md  REPORT.md  main.py  pyproject.toml  run_exp4_parallel_noise.sh  run_exp5_qcnn_matrix.sh  setup_data_pipeline.sh
archive/: check_classes.py  get-dataset.py
dataset/: build_gasnet_clone.py  build_high_snr_dataset.py  build_ml_dataset.py  build_subset_parquet.py  download_sdss_data.py  samples_precheck.py  sdss-data-full-classes.csv
dataset/assets/: custom_star_name_overrides.json
dataset/metadata/: final_dataset_report.txt  star_merge_subclasses.txt  subclass-distribution.txt
experiment_results/experiment4_quanv_noise_robustness/20260531_130639/: AGGREGATE_SUMMARY.txt
experiment_results/experiment5_qcnn/Matrix_20260602_032122/: AGGREGATE_SUMMARY.txt  auc_summary.csv  clean_summary.csv  clean_wilcoxon.csv  jacobian_summary.csv  wilcoxon.csv
experiments/: README.md  run_GasNet_II_replica.py  train_baseline_binary.py  train_baseline_cnn.py  train_classical_mirror_binary.py  train_classical_mirror_binary_tanh.py  train_exp3_classical.py  train_exp3_fewshot.py  train_exp3_quantum.py  train_exp3b_classical_tiny.py  train_exp3b_quantum.py  train_experiment_4class_classical.py  train_experiment_4class_classical_tiny.py  train_experiment_4class_classical_tiny_tanh.py  train_experiment_4class_quantum.py  train_grad_cam_quantum.py  train_quantum.py  train_quantum_binary.py  train_sweep_experiment_4class_pca_version.py  train_sweep_experiment_binary_quantum_against_classical.py
experiments/exp4_noise/: aggregate.py  run_quanv_adv.py  run_quanv_ood.py
experiments/exp5_qcnn/: aggregate.py  run_matrix_one.py
experiments/utils/: build_few_shot_features.py
models/: quantum_model.py  train_flux_only.py  train_gasnet_dataset.py  train_quantum.py  train_subclass_flux_only.py
models_legacy/: model.py  model_subclasses.py  train_aux_z.py  train_flux_only.py
plots/: random-plots-labelled.py  random-unlabled-solutions.py
src/: DataLoader_README.md  __init__.py  cnn_architecture  param_config.py  sdss_dataloader.py  visualise_exp3_circuit.py  visualise_extractor.py  visualise_quantum.py
src/models/: classical_baselines.py  classical_cnn.py  classical_mirror.py  exp3_models.py  qcnn.py  qsvm.py  quantum_model.py  quanvolution.py
src/testing_scripts/: test_data_loader.py
src/training/: logger.py  metrics.py  trainer.py
(+29 files in other folders)
