[project]
name = "qml-analyzinggalaxies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "astropy>=7.2.0",
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "scipy-stubs>=1.17.1.3",
    "sdss-access>=3.0.10",
    "pennylane>=0.39.0",
    "torch>=2.6.0",
    "visualtorch>=0.2.4",
    "torchview>=0.2.7",
    "torchviz>=0.0.3",
    "onnxscript>=0.6.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# only install torch from the pytorch-cu126 index if not on macOS
[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" },
]
